# ecliptix-ssl-pinning

./: .gitignore  BUILD.md  CLAUDE.md  CLAUDE_WORLD_CLASS.md  CMakeLists.txt  CMakeLists.txt.old  INTEGRATION.md  build_all.sh  build_client.sh  build_server.sh  test_c_api  test_c_api.cpp  test_cert_key_type  test_cert_key_type.cpp  test_ed25519  test_ed25519.cpp  test_final_api  test_final_api.cpp  test_minimal  test_rsa_new  test_rsa_new.cpp  test_rsa_simple.cpp
build-client-macos/: CPackConfig.cmake  CPackSourceConfig.cmake  EcliptixSecurityConfig.cmake
build-client-macos/include/ecliptix/: client_exports.h
build-linux/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
build-linux/include/ecliptix/: client_exports.h  server_exports.h
build-macos/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
build-macos/include/ecliptix/: exports.h
build-release/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
build-scripts/: build-all.sh  build-client-linux.sh  build-client-macos.sh  build-client-win.ps1  build-server-linux.sh  build-server-macos.sh  build-server-win.ps1
build-server-macos/: CPackConfig.cmake  CPackSourceConfig.cmake
build-server-macos/include/ecliptix/: server_exports.h
build-windows/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  EcliptixSecurityConfig.cmake
build-windows/include/ecliptix/: client_exports.h  server_exports.h
builds/macos/include/ecliptix/core/: api.hpp  types.hpp
client/: CMakeLists.txt
client/embedded/: keys.h  public_key.h
client/include/: ecliptix_client.h
client/src/: client.cpp
cmake/: EcliptixSecurityConfig.cmake.in  linux-toolchain.cmake  windows-toolchain-minimal.cmake  windows-toolchain-x86.cmake  windows-toolchain.cmake
demo/: main.cpp
docker/: Dockerfile.linux  Dockerfile.windows  Dockerfile.windows-minimal
embedded/: embedded_crypto.hpp  embedded_pins.hpp
embedded/client/: client_keys.hpp
examples/: README.md  external_key_example.cpp  generate_test_keys.sh
include/: ecliptix_client.h  ecliptix_common.h  ecliptix_server.h
include/ecliptix/: api.hpp  security.h  security.hpp  types.h
include/ecliptix/core/: secure_memory.hpp  types.hpp
include/internal/: cryptographic_provider.hpp  openssl_wrapper.hpp  sodium_wrapper.hpp
keys/: embed_keys.py  generate_keys.sh  generate_pki.sh
scripts/: build-all-platforms.sh  build-linux-release.sh  build-linux-simple.sh  build-linux.sh  build-macos.sh  build-windows-minimal.sh  build-windows.sh
server/: CMakeLists.txt
server/embedded/: keys.h
server/include/: ecliptix_server.h
server/src/: server.cpp
src/: cryptographic_provider.cpp  openssl_wrapper.cpp  openssl_wrapper_simple.cpp  security.cpp  security_api.cpp
src/client/: client_api.cpp
src/server/: server_api.cpp
tests/: common_types.h  test_api_integration.cpp  test_encryption.cpp  test_hashing.cpp  test_helpers.h  test_main.cpp  test_memory.cpp  test_random.cpp  test_signatures.cpp  test_ssl.cpp  test_types.cpp
